# epm

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.e2e.yml  docker-compose.yml  ideas.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 24c767b4fc2d_initial_schema.py  8b17d4e2a951_conversation_pinned_archived.py  c9d3f1a2b4e7_project_owner_id.py  d4e8a7c15f2b_environment_oauth_fields.py  e5f1a9c73b8d_api_tokens.py
backend/app/: codegen.py  config.py  logging.py  main.py
backend/app/agent/: __init__.py  blocks.py  deploy.py  form_nlu.py  intent.py  (+7 more)
backend/scripts/: eval_nlu.py  eval_rag.py  export_schema.py  export_training_data.py  generate_synthetic_corpus.py  launch_finetune.py  migrate.py
backend/tests/: conftest.py  test_agent_loop.py  test_agent_teams.py  test_api.py  test_artifacts.py  test_artifacts_edgecases.py  test_authz.py  test_authz_fuzz.py  test_connector_and_security.py  test_context_and_architecture.py  test_context_diff.py  test_diff_fuzz.py  test_embeddings.py  test_eval_nlu.py  test_ext_tokens.py  test_features_api.py  test_form_nlu.py  test_launch_finetune.py  test_llm_strategy.py  test_metadata_export.py  test_multiuser.py  test_oauth_connector.py  test_ops_features.py  test_oracle_roundtrip.py  test_orchestrator.py  test_outline_defaults.py  test_postgres_compat.py  test_provider_discover.py  test_rag_core.py  test_rag_eval.py  test_rag_flow.py  test_rag_fuzz.py  test_rag_grounding_ext.py  test_rule_package.py  test_rule_validation.py  test_schema_drift.py  test_snapshot_context.py  test_snapshot_deep_parse.py  test_snapshot_flow.py  test_snapshot_forms.py  (+10 more)
(+655 files in other folders)
