[project]
name = "epm-wizard-backend"
version = "0.1.0"
description = "EPM Wizard — local-first AI workspace for Oracle EPM implementation (backend)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "httpx>=0.27",
    "structlog>=24.1",
    "defusedxml>=0.7.1",
    "python-multipart>=0.0.9",
    "cryptography>=42.0",
    "openpyxl>=3.1",
    "oletools>=0.60",
    "python-docx>=1.1",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
# OS keychain support is optional and platform dependent; the encrypted local
# store is the portable fallback used inside Docker.
keychain = ["keyring>=25.0"]
# PostgreSQL driver for hosted deployments (EPMW_DATABASE_URL). Local installs
# stay lean — SQLite needs nothing extra.
postgres = ["psycopg[binary]>=3.1"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# E501 line length is enforced by the formatter, not the linter; UP042 (StrEnum)
# is intentionally not adopted — `str, Enum` is Pydantic-friendly and explicit.
ignore = ["E501", "B008", "UP042"]
